# books-recommendation

./: .gitignore  EDA.ipynb  environment.yml  pyproject.toml
configurations/: config.py
data_models/: EventDataModel.py
database/connections/: I_DatabaseManager.py  PostgreDatabaseManager.py
database/helpers/: handle_exceptions_and_logging.py
database/models/: models.py
database/repositories/: ModelConfigurationRepository.py  ModelHyperparameterRepository.py  ModelHyperparameterTypeRepository.py  ModelRepository.py  ModelScoreRepository.py  ModelScoreTypeRepository.py  ModelStateRepository.py  ModelTypeRepository.py  PostgreBaseReposotory.py  TaskTypeRepository.py
helpers/: exceptions.py
providers/: EventStoreProvider.py
providers/clients/: EventStoreClient.py
providers/interfaces/: I_EventStoreProveder.py
services/: RecommendationService.py  init.py
worker/: BookRecommendationEngine.py
worker/operations/: ModelSaver.py  ModelTrainer.py  Preprocesor.py
worker/operations/ml_models/: I_Model.py  NeuralNet.py  SVD.py
